--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,4 +7,4 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = "0.3"
+structopt = "0.3" # cli工具库
