--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,5 +7,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-mysql = "*" 
+actix-web = "3"
+mysql = "*"
 structopt = "0.3" # cli工具库
+futures-timer = "*"
